# craiyon-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  docker-compose.yml  flake.nix  rustfmt.toml
.cargo/: config.toml
.github/workflows/: lint.yml
craiyon-bot-derive/: Cargo.toml
craiyon-bot-derive/src/: lib.rs
src/: api_methods.rs  apis.rs  bot.rs  cache.rs  cobalt.rs  command_context.rs  command_manager.rs  commands.rs  craiyon.rs  logchamp.rs  main.rs  message_queue.rs  not_commands.rs  openai.rs  parsed_command.rs  passwordpurgatory.rs  ratelimit.rs  translate.rs  urbandictionary.rs  utilities.rs  utils.rs
src/apis/: azuracast.rs  clippy.rs  cobalt.rs  coinranking.rs  craiyon.rs  different_dimension_me.rs  eurofxref.rs  fal.rs  google.rs  google_aistudio.rs  google_palm.rs  ivona.rs  kiwifarms.rs  makersuite.rs  mathjs.rs  microlink.rs  moveit.rs  obscuretube.rs  openai.rs  opera_gx.rs  petittube.rs  poligon.rs  polymarket.rs  stablehorde.rs  translate.rs  urbandictionary.rs  urbansharing.rs
src/commands/: autocomplete.rs  badtranslate.rs  calculate_inline.rs  charinfo.rs  cobalt_download.rs  config.rs  convert.rs  craiyon.rs  craiyon_search.rs  delete.rs  dice_reply.rs  different_dimension_me.rs  fal.rs  flux.rs  gemini.rs  generate.rs  google_palm.rs  groq.rs  hopbot.rs  httpcat.rs  kebab.rs  kiwifarms.rs  llama.rs  makersuite.rs  markov_chain.rs  mevo.rs  moveit_joke.rs  nitro.rs  obscuretube.rs  openrouter.rs  petittube.rs  ping.rs  polymarket.rs  radio_poligon.rs  radio_sur.rs  screenshot.rs  sex.rs  stable_diffusion.rs  stable_horde.rs  stablehorde.rs  (+7 more)
src/craiyon/: api.rs  models.rs
src/mathjs/: api.rs  models.rs
src/not_commands/: accurate.rs  auto_reply.rs  calculate_inline.rs  rabbit_nie_je.rs
src/openai/: api.rs  models.rs
src/urbandictionary/: api.rs  models.rs
src/utilities/: api_utils.rs  bot_state.rs  cache.rs  command_context.rs  command_dispatcher.rs  command_manager.rs  config.rs  convert_argument.rs  ffprobe.rs  file_download.rs  google_translate.rs  image_utils.rs  logchamp.rs  markov_chain_manager.rs  message_entities.rs  message_filters.rs  message_queue.rs  parse_arguments.rs  parse_command.rs  parsed_command.rs  rate_limit.rs  ratelimit.rs  telegram_utils.rs  test_fixtures.rs  text_utils.rs  together.rs  yt_dlp.rs
