[package]
name = "craiyon-bot"
version = "1.0.0"
edition = "2021"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
allow_attributes = "warn"

[dependencies]
async-signal = "0.2"
async-trait = "0.1.86"
base64 = "0.22"
bytes = "1.10.0"
charname = "1.15"
colored = "3.0"
counter = "0.6"
dotenvy = "0.15"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
log = { version = "0.4.26", features = ["std"] }
markov-chain = { git = "https://github.com/jelni/markov-chain" }
md5 = "0.7"
oneshot = "0.1.11"
rand = "0.9"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
rmp-serde = "1.1"
serde = "1.0.218"
serde_json = "1.0.139"
tdlib = { git = "https://github.com/jelni/tdlib-rs-latest" }
tempfile = "3.17.1"
time = { version = "0.3", features = ["macros", "serde", "serde-well-known"] }
tokio = { version = "1.43", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
url = "2.5"
