[package]
name = "craiyon-bot"
version = "1.0.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
allow_attributes = "warn"

[dependencies]
async-signal = "0.2"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.11"
charname = "1.17"
colored = "3.1"
counter = "0.7"
dotenvy = "0.15"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
log = { version = "0.4", features = ["std"] }
markov-chain = { git = "https://github.com/jelni/markov-chain" }
md5 = "0.8"
oneshot = "0.1"
rand = "0.9"
reqwest = { version = "0.13", features = ["json", "stream"] }
rmp-serde = "1.3"
serde = "1.0"
serde-xml-rs = "0.8"
serde_json = "1.0"
tdlib = { git = "https://github.com/jelni/tdlib-rs-latest" }
tempfile = "3.24"
time = { version = "0.3", features = ["macros", "serde", "serde-well-known"] }
tokio = { version = "1.49", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
url = "2.5"
